drm/i915: Fix errors on pipe A after hibernation

When booting after suspending to disk, the screen would stay black and
other consoles would spam:
  [drm] *ERROR* Fault errors on pipe A: 0x00000080

This has been introduced in
https://cgit.freedesktop.org/drm-tip/commit/drivers/gpu/drm/i915?id=39a2bd34c933b00f7c7ada923c212b3ff826fb5d
And has been the case for all kernel versions since then (starting with
5.18). For more information, see
https://gitlab.freedesktop.org/drm/intel/-/issues/6506